fix: Context menu in data browser disappears behind menu bar (#3106)

--- a/src/components/ContextMenu/ContextMenu.scss
+++ b/src/components/ContextMenu/ContextMenu.scss
@@ -3,11 +3,16 @@
 .menu {
 	position: absolute;
 	font-size: 14px;
+	// To be shown above the toolbar with also z-index set
+	// src/components/Toolbar/Toolbar.scss
+	z-index: 6;
 
 	ul {
 		background: $purple;
 		@include animation('fade-in .2s linear');
 		opacity: 0;
+		border: 1px solid rgba(255, 255, 255, 0.15);
+		box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
 	}
 
 	li {
